--- a/lib/systemd/system/nsqd.service
+++ b/lib/systemd/system/nsqd.service
@@ -1,10 +1,12 @@
 [Unit]
-Description=Realtime distributed messaging (nsqd)
+Description=nsqd: realtime distributed messaging
 After=network.target
+StartLimitIntervalSec=0
 
 [Service]
 ExecStart=/usr/bin/nsqd -config /etc/nsq/nsqd.conf
 Restart=always
+RestartSec=2
 User=nsq
 Group=nsq
 StateDirectory=nsq
